# iot-ceiling-light

./: .gitignore  main.py
app/: routes.py
light-controller/: Cargo.toml  controller.py
light-controller/src/: .main.rs.swp  main.rs
