[package]
name = "light-controller"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1

[dependencies]
chrono = "0.4.11"
rust-pigpio = "0.2.0"
redis = "0.15.1"
rumqtt = "0.31.0"